; ModuleID = '/home/carl/AnghaBench/lab/engine/code/cgame/extr_cg_newdraw.c_CG_SelectNextPlayer.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/cgame/extr_cg_newdraw.c_CG_SelectNextPlayer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@cg_currentSelectedPlayer = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@numSortedTeamPlayers = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CG_SelectNextPlayer() #0 {
  %1 = call i32 (...) @CG_CheckOrderPending()
  %2 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cg_currentSelectedPlayer, i32 0, i32 0), align 8
  %3 = icmp sge i64 %2, 0
  br i1 %3, label %4, label %11

4:                                                ; preds = %0
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cg_currentSelectedPlayer, i32 0, i32 0), align 8
  %6 = load i64, i64* @numSortedTeamPlayers, align 8
  %7 = icmp slt i64 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %4
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cg_currentSelectedPlayer, i32 0, i32 0), align 8
  %10 = add nsw i64 %9, 1
  store i64 %10, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cg_currentSelectedPlayer, i32 0, i32 0), align 8
  br label %12

11:                                               ; preds = %4, %0
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cg_currentSelectedPlayer, i32 0, i32 0), align 8
  br label %12

12:                                               ; preds = %11, %8
  %13 = call i32 (...) @CG_SetSelectedPlayerName()
  ret void
}

declare dso_local i32 @CG_CheckOrderPending(...) #1

declare dso_local i32 @CG_SetSelectedPlayerName(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
